src/style/laf.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

:root {
    --color-bkgd: white;
    --color-default-text: black;
    --color-disabled-text: rgba(0, 0, 0, 0.40);
    --color-btn-bkgd: rgba(12, 12, 13, 0.1);
    --color-btn-hover-bkgd: rgba(12, 12, 13, 0.2);
    --color-btn-hover-border: rgba(12, 12, 13, 0.1);
    --color-btn-active-bkgd: rgba(12, 12, 13, 0.3);
    --color-btn-border: rgba(12, 12, 13, 0.1);
    --color-btn-text: black;
    --color-mac-btn-border-t: 1px solid #e7e7e7;
    --color-mac-btn-border-r: 1px solid #e1e1e1;
    --color-mac-btn-border-b: 1px solid #d4d4d4;
    --color-mac-btn-border-l: 1px solid #e5e5e5;
    --color-mac-btn-bkgd: linear-gradient(to bottom, #fdfefd 0%, #f6f6f6 100%);
    --color-mac-btn-shadow: #f3f3f3;
    --color-tb-bkgd: -moz-field;
    --color-tb-border: rgba(12, 12, 13, 0.2);
    --color-tb-hover-border: rgba(12, 12, 13, 0.3);
    --color-tb-text: -moz-fieldtext;
    --color-tb-selection: rgba(10, 132, 255, 0.3);
    --color-cb-bkgd: #fff;
    --color-cb-border: #b1b1b1;
    --color-cb-hover-bkgd: #fbfbfb;
    --color-cb-hover-border: #737373;
    --color-cb-active-bkgd: #ebebeb;
    --color-cb-checked-border: #0670cc;
    --color-cb-checked-hover-border: #005bab;
    --color-cb-checked-active-border: #004480;
    --color-hyperlink: #0060df;
    --color-hyperlink-active: #003eaa;
    --color-error-text: #d70022;

    --url-dropdown-arrow: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNiIgaGVpZ2h0PSIxNiIgdmlld0JveD0iMCAwIDE2IDE2Ij4KICA8cGF0aCBkPSJNOCwxMkwzLDcsNCw2bDQsNCw0LTQsMSwxWiIgZmlsbD0iIzZBNkE2QSIgLz4KPC9zdmc+Cg==");

}

@media (prefers-color-scheme: dark) {
    :root {
	--color-bkgd: #2a2a2e;
	--color-default-text: #f9f9fa;
	--color-disabled-text: rgba(249, 249, 250, 0.4);
	--color-btn-bkgd: #4a4a4f;
	--color-btn-hover-bkgd: #606060;
	--color-btn-hover-border: #606060;
	--color-btn-active-bkgd: #737373;
	--color-btn-border: #4a4a4f;
	--color-btn-text: #f9f9fa;
	--color-mac-btn-border-t: 1px solid #585858;
	--color-mac-btn-border-r: 1px solid var(--color-btn-border);
	--color-mac-btn-border-b: 1px solid var(--color-btn-border);
	--color-mac-btn-border-l: 1px solid var(--color-btn-border);
	--color-mac-btn-bkgd: var(--color-btn-bkgd);
	--color-mac-btn-shadow: #2a2a2e;
	--color-tb-bkgd: #0c0c0d;
	--color-tb-border: #4a4a4f;
	--color-tb-hover-border: #737373;
	--color-tb-text: #f9f9fa;
	--color-tb-selection: rgba(10, 132, 255, 0.75);
	--color-cb-bkgd: #202023;
	--color-cb-border: #737373;
	--color-cb-hover-bkgd: #2a2a2e;
	--color-cb-hover-border: #b1b1b3;
	--color-cb-active-bkgd: #38383d;
	--color-cb-checked-border: #0670cc;
	--color-cb-checked-hover-border: #005bab;
	--color-cb-checked-active-border: #004480;
	--color-hyperlink: #45a1ff;
	--color-hyperlink-active: #0a84ff;
	--color-error-text: #ff0039;

	--url-dropdown-arrow: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 16 16"><g><path style="fill:none;fill-rule:evenodd;stroke:rgb(237,237,240);stroke-width:1.5;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" d="M 3.5,6.5 8,11 12.5,6.5"/></g></svg>');
    }
}

html,
body {
  background: transparent;
  box-sizing: border-box;
  color: #222426;
  cursor: default;
  display: flex;
  flex-direction: column;
  font: caption;
  margin: 0;
  padding: 0;
  user-select: none;
}

body * {
  box-sizing: border-box;
  text-align: start;
}

.browser-style {
  margin-bottom: 6px;
  text-align: left;
}

select.browser-style {
    font: caption;
    text-overflow: ellipsis;
}

body[data-laf="true"] select.browser-style {
    padding: 0 4px 0;
}

body[data-laf="true"]:not([data-os="mac"]) select.browser-style {
    height: 24px;
    border: 1px solid var(--color-btn-border);
    box-shadow: 0 0 0 0 transparent;
    outline: 0 !important;
    transition-duration: 250ms;
    transition-property: box-shadow, border;
    padding-inline-end: 24px;
    border-radius: 0;
    background-color: var(--color-btn-bkgd);
    color: var(--color-btn-text);
}

body[data-laf="true"][data-os="mac"] select.browser-style {
    height: 20px;
}

button,
select.browser-style {
    font: caption;
}

button {
    padding: 0px 8px;
    text-align: center;
}

button[disabled],
select.browser-style[disabled] {
    color: #999;
    opacity: 0.5;
}

body[data-laf="true"]:not([data-os="mac"]) button:not(.ae-button):not(.toolbar-button) {
    border: 1px solid var(--color-btn-border);
    box-shadow: 0 0 0 0 transparent;
    outline: 0 !important;
    transition-duration: 250ms;
    transition-property: box-shadow, border;
    border-radius: 3px;
    background-color: var(--color-btn-bkgd);
    color: var(--color-btn-text);
}

body[data-os="mac"] button:not(.ae-button):not(.toolbar-button),
body[data-os="mac"][data-laf="true"] select.browser-style {
    border-top: var(--color-mac-btn-border-t);
    border-right: var(--color-mac-btn-border-r);
    border-bottom: var(--color-mac-btn-border-b);
    border-left: var(--color-mac-btn-border-l);
    border-radius: 4.5px;
    box-shadow: 0px 1px 2px 0px var(--color-mac-btn-shadow);
    background: var(--color-mac-btn-bkgd);
    color: var(--color-default-text);
    font-weight: normal;
}

body[data-laf="true"]:not([data-os="mac"]) button:hover:not(.ae-button):not(.toolbar-button),
body[data-laf="true"]:not([data-os="mac"]) select.browser-style:hover {
    background-color: var(--color-btn-hover-bkgd);
}

body[data-laf="true"]:not([data-os="mac"]) button:active:not(.ae-button):not(.toolbar-button),
body[data-laf="true"]:not([data-os="mac"]) select.browser-style:active {
    background-color: var(--color-btn-active-bkgd);
}
/* ... */

